@@ -1,3 +1,5 @@
+* Added support for the view source key fn+space (erikos)
+
 50
 
 * View source for Browse
